# DynaRange

./: .gitignore  CMakeLists.txt  CMakeLists_linux.txt  CMakeLists_windows.txt  DynaRangeBase.cpp  DynaRangeBase.h  README.md  TODO.txt  build-win64.sh  build.yml.txt  cameradr_helpfile.txt  cli_helpfile.txt  cli_user_manual.txt  crear_instalador_windows.nsi  detect4corners.R  dynRange.cpp  dynRangeGui.cpp  dynamicrange.R  dynamicrange.cpp  dynarangeUI.fbp  icono.rc  magentachart.R  new_dynarangeUI.fbp  new_dynarangeUI.fbp.txt  orig_dynarangeUI.fbp  proyectos_rango_dynarange.txt  rango_helpfile.txt  rd.R  sources.sh  sources.txt  tree_external.txt  win64-toolchain.cmake  wix.patch.xml  wix_template.wxs.in  workflows.txt
.cache/clangd/index/: Analysis.cpp.A78E7EC18691E211.idx  Analysis.hpp.82FEF2E17F8B99E9.idx  Arguments.cpp.48E6745C500B711F.idx  Arguments.hpp.1A2F33587070EEA2.idx  Drawing.cpp.7616C3874A3EB3F2.idx  Drawing.hpp.29D1EA79BA146F5B.idx  DynaRangeBase.cpp.BDCB98C4741824CD.idx  DynaRangeBase.h.E9C1F886C160124F.idx  DynaRangeFrame.cpp.947E7BD0A1FFDE39.idx  DynaRangeFrame.hpp.1345BE37B1473080.idx  DynaRangeGuiApp.cpp.B22AB27AF5D3FCA2.idx  Engine.cpp.E36D778FB2935007.idx  Engine.hpp.DF8ABDE31AE931E3.idx  ImageProcessing.cpp.A6A61380E13B25EE.idx  ImageProcessing.hpp.565D3CDACFF25829.idx  Initialization.cpp.1031D0BFB4F2A3B3.idx  Initialization.hpp.0B6A229D9FE50F9C.idx  Math.cpp.375DF5DBDF003795.idx  Math.hpp.96365EF922313355.idx  Plotting.cpp.F702F1E42CE09A9E.idx  Plotting.hpp.BA8B8660C6EBBE19.idx  Processing.cpp.575FCCCFFB3497E2.idx  Processing.hpp.3DF5D2E04271B37D.idx  RawFile.cpp.E742296577630770.idx  RawFile.hpp.0B89DAE235901545.idx  Reporting.cpp.FD4FEF3B49495472.idx  Reporting.hpp.7B378F00024E22B3.idx  rango.cpp.C96916DABACA050E.idx
.github/workflows/: build-windows.yml  build.yml
assets/i18n/po/: ca.po  de.po  dynaRange.pot  es.po  es.po~  fr.po  fr.po~  pt.po
assets/macos/: icono.icns
assets/windows/: icono_noise.rc  icono_owl.rc
assets/windows/packaging/: wix_template.wxs.in
cmake/: UseGettext.cmake
core/: arguments.cpp  arguments.hpp  engine.cpp  functions.cpp  functions.hpp
core/gui/: EventIDs.hpp  InputTab.cpp  InputTab.hpp  LogTab.cpp  LogTab.hpp  ResultsTab.cpp  ResultsTab.hpp
docs/: 2025-10 next_steps.txt  BUGS.txt  cli_helpfile.txt  cli_user_manual.txt  next_steps.txt
docs/technicals/: debug_crash.txt  source_map_app.txt  work_with_git.txt
dynaRangePortable/: dynaRangeGui  rango
po/: ca.po  ca.po~  de.po  de.po~  dynRange.pot  dynaRange.pot  dynamicrange.pot  dynrange.pot  es.po  es.po~  fr.po  fr.po~  it.po  it.po~  pt.po  pt.po~
src/: DynaRangeCli.cpp  DynaRangeGuiApp.cpp  dynRangeGuiApp.cpp  dynaRangeGuiApp.cpp  rango.cpp  rango.sublime-workspace
src/R/: clipped_normal.R  detect4corners.R  dynamicrange.R  dynamicrange_V2.R  dynamicrange_V2_Sony.R  dynamicrange_V3_Sony.R  dynamicrange_V4.R  dynamicrange_V5.R  dynamicrange_V6.R  dynamicrange_V7.R  dynamicrange_V8.R  dynamicrange_V9.R.txt  homography.R  magentachart.R
src/cli/: rango.cpp
src/core/: Analysis.cpp  Analysis.hpp  Arguments.cpp  Arguments.hpp  ChartProfile.cpp  ChartProfile.hpp  Constants.hpp  DebugConfig.hpp  Engine.cpp  Engine.hpp  ImageProcessing.cpp  ImageProcessing.hpp  Math.cpp  Math.hpp  Plotting.cpp  Plotting.hpp  RawFile.cpp  RawFile.hpp  arguments.cpp  arguments.hpp  engine.cpp  engine.hpp  functions.cpp  functions.hpp
src/core/analysis/: Analysis.cpp  Analysis.hpp  Constants.hpp  CurveCalculator.cpp  CurveCalculator.hpp  FilePreparer.cpp  FilePreparer.hpp  ImageAnalyzer.cpp  ImageAnalyzer.hpp  RawProcessor.cpp  RawProcessor.hpp
src/core/arguments/: ArgumentManager.cpp  ArgumentManager.hpp  Arguments.cpp  Arguments.hpp  ArgumentsOptions.hpp  ChartOptionsParser.cpp  ChartOptionsParser.hpp  CommandGenerator.cpp  CommandGenerator.hpp  CommandLineParser.cpp  CommandLineParser.hpp  Constants.hpp  ProgramOptions.hpp
src/core/artifacts/: ArtifactFactory.cpp  ArtifactFactory.hpp
src/core/engine/: Constants.hpp  Engine.cpp  Engine.hpp  Initialization.cpp  Initialization.hpp  Normalization.cpp  Normalization.hpp  PatchAnalysisStrategy.cpp  PatchAnalysisStrategy.hpp  Processing.cpp  Processing.hpp  Reporting.cpp  Reporting.hpp  Validation.cpp  Validation.hpp  fuentes_core_engine.txt
src/core/graphics/: ChartGenerator.cpp  ChartGenerator.hpp  Colour.hpp  Constants.hpp  Drawing.cpp  Drawing.hpp  FontManager.cpp  FontManager.hpp  ImageProcessing.cpp  ImageProcessing.hpp  PlotBase.cpp  PlotBase.hpp  PlotBoundsCalculator.cpp  PlotBoundsCalculator.hpp  PlotData.cpp  PlotData.hpp  PlotDataGenerator.cpp  PlotDataGenerator.hpp  PlotInfoBox.cpp  PlotInfoBox.hpp  PlotOrchestrator.cpp  PlotOrchestrator.hpp  Plotting.cpp  Plotting.hpp  RenderContext.hpp
src/core/io/: OutputWriter.cpp  OutputWriter.hpp  RawFile.cpp  RawFile.hpp
src/core/math/: Math.cpp  Math.hpp
src/core/normalization/: Normalizer.cpp  Normalizer.hpp
src/core/setup/: CalibrationEstimator.cpp  CalibrationEstimator.hpp  ChartProfile.cpp  ChartProfile.hpp  Constants.hpp  FileSorter.cpp  FileSorter.hpp  InputFileManager.cpp  InputFileManager.hpp  MetadataExtractor.cpp  MetadataExtractor.hpp  PlotLabelGenerator.cpp  PlotLabelGenerator.hpp  PreAnalysis.cpp  PreAnalysis.hpp  PreAnalysisManager.cpp  PreAnalysisManager.hpp  SensorResolution.cpp
src/core/utils/: Base64Encode.cpp  Base64Encode.hpp  CommandGenerator.cpp  CommandGenerator.hpp  Constants.hpp  Formatters.cpp  Formatters.hpp  LocaleManager.cpp  LocaleManager.hpp  OutputFilenameGenerator.cpp  OutputFilenameGenerator.hpp  OutputNamingContext.hpp  PathManager.cpp  PathManager.hpp  PlatformUtils.cpp  PlatformUtils.hpp  PlotTitleGenerator.cpp  PlotTitleGenerator.hpp
src/gui/: Constants.hpp  DynaRangeBase.cpp  DynaRangeBase.h  DynaRangeFrame.cpp  DynaRangeFrame.hpp  DynaRangeGuiApp.cpp  DynaRangeGuiApp.hpp  GuiPresenter.cpp  GuiPresenter.hpp  ImageViewer.cpp  ImageViewer.hpp  InputController.cpp  InputController.hpp  ResultsController.cpp  ResultsController.hpp  ResultsGridManager.hpp  dynarangeUI.fbp
src/gui/controllers/: ChartController.cpp  (+11 more)
(+78 files in other folders)
